z-index fix

--- a/components/styles/videoplayer.less
+++ b/components/styles/videoplayer.less
@@ -434,7 +434,7 @@ video::-webkit-media-text-track-container {
     transition: opacity 0.5s;
     height: 90%;
     justify-content: center;
-    z-index: 600;
+    z-index: 100;
 }
 
 .right-bar {
@@ -448,7 +448,7 @@ video::-webkit-media-text-track-container {
     transition: opacity 0.5s;
     height: 90%;
     justify-content: center;
-    z-index: 600;
+    z-index: 100;
 }
 
 .visible {
